Changed nut name to include flex, align and justify to try to resolve display issue on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,13 +191,15 @@ div.col-lg-4.col-sm-12 {
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     height: 50px;
     width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: auto;
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 .nut-name h4 {
-    margin-top: 12px;
     text-align: center;
     font-family: "Concert One", sans-serif;
 }
